# matrixsource

./: CMakeLists.txt  LICENSE  matrixsource.pro
cmake/: FindFMOD.cmake
fmod/: README.txt
src/: MatrixAudioPlayer.cpp  MatrixAudioPlayer.h  MatrixPlayer.cpp  MatrixPlayer.h  MatrixPlayerWindow.cpp  MatrixPlayerWindow.h  MatrixPlayerWindow.ui  MatrixVideoPlayer.cpp  MatrixVideoPlayer.h  Q4XLoader.cpp  Q4XLoader.h  main.cpp
